kube/cert-manager-stuff/testing/hello-app.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: hello-app
        # image: us-docker.pkg.dev/google-samples/containers/gke/hello-app-tls:1.0
        image: "nginx:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      #   volumeMounts:
      #     - name: tls
      #       mountPath: /etc/tls
      #       readOnly: true
      #   env:
      #     - name: TLS_CERT
      #       value: /etc/tls/tls.crt
      #     - name: TLS_KEY
      #       value: /etc/tls/tls.key
      # volumes:
      # - name: tls
      #   secret:
      #     secretName: helloweb-ingress-tls
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
    name: helloweb
spec:
    ports:
    - port: 8443
      protocol: TCP
      targetPort: 80
    selector:
        app: hello
        tier: web
    type: LoadBalancer
---
# Ingress Resource
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp-nginx-resource
  annotations:
    cert-manager.io/cluster-issuer: "helloweb-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - home.boopablesnoot.click  # Replace with your desired domain
    secretName: helloweb-ingress-tls
  rules:
  - host: home.boopablesnoot.click  # Replace with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloweb
            port:
              number: 80
---
